--- a/views/index.twig
+++ b/views/index.twig
@@ -4,7 +4,11 @@
   <h1>{{title}}</h1>
   <p>Welcome to {{title}}</p>
   {% for post in posts %}
-    <h3>{{ post.userName }}</h3>
+    <h3>{{ post.author }}</h3>
     <p>{{ post.message }}</p>
-    {% endfor %}
+  {% endfor %}
+
+  <form method="POST" action="/posts">
+  
+  </form>
 {% endblock %}
